syntax = "proto3";
package axelar.vote.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/vote/types";

import "google/protobuf/any.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "axelar/vote/exported/v1beta1/types.proto";
import "axelar/permission/exported/v1beta1/types.proto";

option (gogoproto.goproto_getters_all) = false;

message VoteRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];

  vote.exported.v1beta1.PollKey poll_key = 2 [ (gogoproto.nullable) = false ];
  vote.exported.v1beta1.Vote vote = 3 [ (gogoproto.nullable) = false ];
}

message VoteResponse { string log = 1; }
